fix page content not centered

--- a/src/style/StepperContainer.module.scss
+++ b/src/style/StepperContainer.module.scss
@@ -5,6 +5,7 @@
     overflow-x: hidden;
     height: 100%;
     padding: 10px 5%;
+    justify-content: center;
 }
 
 .stepperStep {
